# cookiecutter

./: .gitignore  .pre-commit-config.yaml  .python-version  .venv  CONTRIBUTING.md  README.md  cookiecutter.json  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codeql.yml  constraints.txt  main.yaml
hooks/: pre_gen_project.py
tests/: test_graspit_cookiecutter.py
{{cookiecutter.repo_name}}/: .gitignore  .pre-commit-config.template.yaml  .python-version  README.md  pyproject.template.toml
{{cookiecutter.repo_name}}/.github/workflows/: main.yaml
{{cookiecutter.repo_name}}/docs/: getting_started.md  project_specific_setup.md  quickstart.md  updating_requirements.md  using_poetry.md
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: __init__.py
