# 🚨 THIS IS THE GRASPIT-COOKIECUTTER pyproject.toml — please double check you want to edit
# this file and not {{cookiecutter.repo_name}}/pyproject.template.toml
###########
# 📜 Poetry
###########
[tool.poetry]
name = "graspit-cookiecutter"
version = "0.2.0"
description = ""
authors = ["Fabian Balsiger <contact@graspit.ch>"]
license = "UNLICENSED"
#classifiers = ["Private :: Do Not Upload"]

[tool.poetry.dependencies]
python = "^3.9"
# Everything below here is alphabetically sorted
cookiecutter = "^2.1.1"
mypy = "^1.0.1"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
# Everything below here is alphabetically sorted
black = "^23.1.0"
detect-secrets = "1.4.0"
flake8 = "^5.0.4"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.4.0"
flake8-fixme = "^1.1.1"
flake8-implicit-str-concat = "^0.4.0"
flake8-no-pep420 = "^2.3.0"
flake8-print = "^5.0.0"
flake8-return = "^1.2.0"
ipdb = "^0.13.11"
isort = "^5.12.0"
jupyter-black = "^0.3.3"
pip-audit = "^2.4.14"
pre-commit = "^3.1.0"
pylint = "^2.16.2"
pytest = "^7.2.1"
towncrier = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

############
# ✅ Linters
############
[tool.black]
line-length = 150
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 150
default_section = "THIRDPARTY"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
add_imports = "from __future__ import annotations"

[tool.pylint.MASTER]
ignore-paths = [".git", "{{cookiecutter.repo_name}}"]
load-plugins = []

[tool.pylint."MESSAGES CONTROL"]
enable = "all"
max-module-lines = 2000
max-line-length = 150
max-locals = 50
min-similarity-lines = 150
max-statements = 89
max-args = 22
max-branches = 17
# good-names = []
# disable = []
logging-format-style = "new"

##############
# 📣 Towncrier
##############
[tool.towncrier]
filename = "CHANGELOG.md"
directory = ".changelog/"
template = ".changelog/template.md"
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/fabianbalsiger/cookiecutter/issues/{issue})"
start_string = "<!-- TOWNCRIER -->\n"
underlines = ["", ""]

# .added for new features
# .changed for changes in existing functionality
# .deprecated for soon-to-be removed features
# .removed for now removed features
# .fixed for any bug fixes
# .security in case of vulnerabilities
# .analysis for data analyses
# .docs for documentation improvements
# .maintenance for maintenance tasks & upgrades
[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "analysis"
name = "Analyses"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance Changes"
showcontent = true
